--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </div>
                   <div class="row">
                     <div class="buttons padd-15">
-                      <a href="#" class="btn">Download CV</a>
+                      <a href="#" class="btn" id="downloadCv">Download CV</a>
                       <a href="#contact" class="btn hire-me">Hire me</a>
                     </div>
                   </div>
